--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ form {
   flex-direction: column;
   justify-content: space-evenly;
   flex-grow: 1;
-  padding-bottom: 1rem; 
+  padding-bottom: 1rem;
 }
 
 a,
@@ -113,4 +113,11 @@ button {
 
 .line {
   display: inline-block;
+}
+
+.flexGrow {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
